--- a/first-app/helloworld.yml
+++ b/first-app/helloworld.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
   - name: k8s-demo
-    image: wardviaene/k8s-demo
+    image: weerreew/k8s-lab:latest
     ports:
     - name: nodejs-port
       containerPort: 3000
